--- a/zzz-nb001-simple-chatbot.ipynb
+++ b/zzz-nb001-simple-chatbot.ipynb
@@ -105,16 +105,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "eddbcf93-0b58-4506-af83-2fa2203c711c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:55:21.433651Z",
+     "start_time": "2025-06-18T14:55:21.418141Z"
+    }
+   },
    "source": [
     "import warnings\n",
     "from langchain._api import LangChainDeprecationWarning\n",
     "\n",
     "warnings.simplefilter(\"ignore\", category=LangChainDeprecationWarning)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -144,16 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "992ec4a9-aa01-4e44-aeb9-b9a1f3aa9e54",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:55:24.223140Z",
+     "start_time": "2025-06-18T14:55:24.209466Z"
+    }
+   },
    "source": [
     "import os\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "_ = load_dotenv(find_dotenv())\n",
     "openai_api_key = os.environ[\"OPENAI_API_KEY\"]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -217,15 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "9afcbc7d-a816-41e3-925f-850883f5770d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:55:33.153358Z",
+     "start_time": "2025-06-18T14:55:32.378826Z"
+    }
+   },
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "chatbot = ChatOpenAI(model=\"gpt-3.5-turbo\")"
-   ]
+    "chatbot = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -237,17 +252,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "c5dc0613-fb6d-4c82-a614-9e7307714303",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:55:47.047834Z",
+     "start_time": "2025-06-18T14:55:47.044563Z"
+    }
+   },
    "source": [
     "from langchain_core.messages import HumanMessage\n",
     "\n",
     "messagesToTheChatbot = [\n",
-    "    HumanMessage(content=\"My favorite color is blue.\"),\n",
+    "    HumanMessage(content=\"My favorite color is black.\"),\n",
     "]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -259,24 +279,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "db815e32-8e60-46b3-8cce-fbf40e378397",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:55:50.845697Z",
+     "start_time": "2025-06-18T14:55:49.838473Z"
+    }
+   },
+   "source": [
+    "chatbot.invoke(messagesToTheChatbot)"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Blue is a calming and peaceful color that represents tranquility and serenity. It is often associated with the sky and the ocean, evoking feelings of freedom and openness. Blue is also known to symbolize trust, loyalty, and wisdom. Overall, blue is a versatile and timeless color that is loved by many.', response_metadata={'token_usage': {'completion_tokens': 63, 'prompt_tokens': 13, 'total_tokens': 76}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-c04030ec-cc97-4525-bcb6-617d9b705b64-0', usage_metadata={'input_tokens': 13, 'output_tokens': 63, 'total_tokens': 76})"
+       "AIMessage(content='Black is a classic and versatile color! It often symbolizes elegance, sophistication, and a timeless style. What do you like most about the color black?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 30, 'prompt_tokens': 13, 'total_tokens': 43, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_62a23a81ef', 'id': 'chatcmpl-BjoUY1TUYqEnJlqJxzkL7BtWie0v7', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--0905981d-733e-4eae-b914-60afaa1da02c-0', usage_metadata={'input_tokens': 13, 'output_tokens': 30, 'total_tokens': 43, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "chatbot.invoke(messagesToTheChatbot)"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -297,26 +322,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "id": "c0ead4ee-bda3-4c52-9bdb-7bf234733055",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=\"I'm sorry, I do not have access to that information.\", response_metadata={'token_usage': {'completion_tokens': 13, 'prompt_tokens': 13, 'total_tokens': 26}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-a31d0a71-a438-4cf2-aae1-8b992b0581a7-0', usage_metadata={'input_tokens': 13, 'output_tokens': 13, 'total_tokens': 26})"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:55:56.972549Z",
+     "start_time": "2025-06-18T14:55:54.809622Z"
     }
-   ],
+   },
    "source": [
     "chatbot.invoke([\n",
     "    HumanMessage(content=\"What is my favorite color?\")\n",
     "])"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"I'm not sure what your favorite color is, as I don't have access to personal information. If you'd like to share, I'd be happy to hear about it!\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 32, 'prompt_tokens': 13, 'total_tokens': 45, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_34a54ae93c', 'id': 'chatcmpl-BjoUdPMdgpsvoDobtuZqSV9IP0XSa', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--4596bb7e-043e-4a8a-8c0b-693cc37c1120-0', usage_metadata={'input_tokens': 13, 'output_tokens': 32, 'total_tokens': 45, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -354,10 +384,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
    "id": "735752cc-ecb5-4942-9ed0-b3213f5768c8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:56:01.431999Z",
+     "start_time": "2025-06-18T14:56:01.347715Z"
+    }
+   },
    "source": [
     "from langchain import LLMChain\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -365,28 +398,38 @@
     "from langchain_core.prompts import MessagesPlaceholder\n",
     "from langchain.memory import ConversationBufferMemory\n",
     "from langchain.memory import FileChatMessageHistory"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
    "id": "542bbf66-bc77-4488-8487-b55cdb8bc8bf",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:56:07.734969Z",
+     "start_time": "2025-06-18T14:56:07.732020Z"
+    }
+   },
    "source": [
     "memory = ConversationBufferMemory(\n",
     "    chat_memory=FileChatMessageHistory(\"messages.json\"),\n",
     "    memory_key=\"messages\",\n",
     "    return_messages=True\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
    "id": "27e8431b-5290-4f7f-9566-a90deb060bd1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:56:09.597316Z",
+     "start_time": "2025-06-18T14:56:09.593913Z"
+    }
+   },
    "source": [
     "prompt = ChatPromptTemplate(\n",
     "    input_variables=[\"content\", \"messages\"],\n",
@@ -395,36 +438,41 @@
     "        HumanMessagePromptTemplate.from_template(\"{content}\")\n",
     "    ]\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
    "id": "72392539-0f20-456b-b32d-d367b48245f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/juliocolomer/.pyenv/versions/3.11.4/envs/venv053024-p2/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:119: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 0.3.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
-      "  warn_deprecated(\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:56:11.664331Z",
+     "start_time": "2025-06-18T14:56:11.661395Z"
     }
-   ],
+   },
    "source": [
     "chain = LLMChain(\n",
     "    llm=chatbot,\n",
     "    prompt=prompt,\n",
     "    memory=memory\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
    "id": "57e40af4-1539-497d-afbf-ed38fed90838",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:56:14.792504Z",
+     "start_time": "2025-06-18T14:56:14.245080Z"
+    }
+   },
+   "source": [
+    "chain.invoke(\"hello!\")"
+   ],
    "outputs": [
     {
      "data": {
@@ -434,64 +482,70 @@
        " 'text': 'Hello! How can I assist you today?'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "chain.invoke(\"hello!\")"
-   ]
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
    "id": "2b79cc08-49dd-4746-ab68-9d8ec992abb4",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:56:25.482749Z",
+     "start_time": "2025-06-18T14:56:24.775966Z"
+    }
+   },
+   "source": "chain.invoke(\"my name is Beto\")",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'content': 'my name is Julio',\n",
-       " 'messages': [HumanMessage(content='hello!'),\n",
-       "  AIMessage(content='Hello! How can I assist you today?')],\n",
-       " 'text': 'Nice to meet you, Julio! How can I help you today?'}"
+       "{'content': 'my name is Beto',\n",
+       " 'messages': [HumanMessage(content='hello!', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Hello! How can I assist you today?', additional_kwargs={}, response_metadata={})],\n",
+       " 'text': 'Nice to meet you, Beto! How can I help you today?'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "chain.invoke(\"my name is Julio\")"
-   ]
+   "execution_count": 12
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
    "id": "96e69c4f-b5ed-4c68-9a2a-67a19867f8bd",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T14:56:31.934060Z",
+     "start_time": "2025-06-18T14:56:31.269340Z"
+    }
+   },
+   "source": [
+    "chain.invoke(\"what is my name?\")"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'content': 'what is my name?',\n",
-       " 'messages': [HumanMessage(content='hello!'),\n",
-       "  AIMessage(content='Hello! How can I assist you today?'),\n",
-       "  HumanMessage(content='my name is Julio'),\n",
-       "  AIMessage(content='Nice to meet you, Julio! How can I help you today?')],\n",
-       " 'text': 'Your name is Julio.'}"
+       " 'messages': [HumanMessage(content='hello!', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Hello! How can I assist you today?', additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='my name is Beto', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Nice to meet you, Beto! How can I help you today?', additional_kwargs={}, response_metadata={})],\n",
+       " 'text': 'Your name is Beto.'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "chain.invoke(\"what is my name?\")"
-   ]
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
